integrating user registration API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
-        "fooddetails"
+        "activate",
+        "activate login apicall",
+        "apicall",
+        "fooddetails",
+        "login"
     ]
 }
