integrating user registration API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,13 @@
     "cSpell.words": [
         "activate",
         "activate login apicall",
+        "addcart",
+        "addcomp",
+        "addlist",
+        "addview",
         "apicall",
         "fooddetails",
-        "login"
+        "login",
+        "quickview"
     ]
 }
