integrating user registration API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,15 @@
         "addview",
         "apicall",
         "fooddetails",
+        "iconadd",
+        "iconcart",
+        "iconcomp",
+        "iconlist",
+        "iconview",
         "login",
         "passcode",
-        "quickview"
+        "productselect",
+        "quickview",
+        "subcontainer"
     ]
 }
