integrating user registration API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "addview",
         "apicall",
         "fooddetails",
+        "foodlistssssssssssssssss",
         "iconadd",
         "iconcart",
         "iconcomp",
