--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "addlist",
         "addview",
         "apicall",
+        "displayflex",
         "fooddetails",
         "foodlist",
         "foodlistssssssssssssssss",
