integrating user registration API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "iconview",
         "login",
         "passcode",
+        "productdetails",
         "productselect",
         "quickview",
         "subcontainer"
