integrating user registration API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "iconlist",
         "iconview",
         "imagy",
+        "imagyy",
         "login",
         "passcode",
         "productdetails",
