integrating user registration API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "iconcomp",
         "iconlist",
         "iconview",
+        "imaggy",
         "imagy",
         "imagyy",
         "login",
