integrating user registration API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
         "quickview",
         "rowwrap",
         "subcontainer",
+        "succesfully",
         "validatefullname",
         "validators"
     ]
