integrating user registration API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,12 @@
         "apicall",
         "basket",
         "containerr",
+        "detail",
         "displayflex",
         "fooddetails",
         "foodlist",
         "foodlistssssssssssssssss",
+        "fullwidth",
         "iconadd",
         "iconcart",
         "iconcomp",
@@ -29,6 +31,8 @@
         "productselect",
         "quickview",
         "rowwrap",
+        "shop",
+        "shop detail fullwidth",
         "subcontainer",
         "succesfully",
         "validatefullname",
