integrating user registration API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "imaggy",
         "imagy",
         "imagyy",
+        "indexlogin",
         "intrio",
         "intrio basket",
         "login",
