added cartbutton badge to mobile views

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "addview",
         "apicall",
         "basket",
+        "categ",
         "containerr",
         "detail",
         "displayflex",
