added cartbutton badge to mobile views

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "addview",
         "apicall",
         "basket",
+        "capitata",
         "categ",
         "containerr",
         "detail",
@@ -29,6 +30,7 @@
         "intrio",
         "intrio basket",
         "login",
+        "oleracea",
         "passcode",
         "productdetails",
         "productselect",
