--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "cart total paystack dom",
         "containerr",
         "dom",
+        "name",
+        "newproduct",
+        "newproduct name",
         "paystack",
         "phonenumber",
         "total"
