--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "newproduct name",
         "paystack",
         "phonenumber",
-        "total"
+        "total",
+        "updateproduct",
+        "updateproduct name"
     ]
 }
