--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "cart total paystack dom",
         "containerr",
         "dom",
+        "foodlisting",
         "name",
         "newproduct",
         "newproduct name",
