--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "newproduct",
         "newproduct name",
         "paystack",
+        "pendings",
         "phonenumber",
         "total",
         "updateproduct",
