--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "containerr",
         "dom",
         "foodlisting",
+        "loginadmin",
         "name",
         "newproduct",
         "newproduct name",
